@@ -1,3 +1,7 @@
+2010-12-28	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* src/compare_db.c:
+	  - use strftime to format timestamps
+
 2010-12-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/compare_db.c:
 	  - added xattrs2array, acl2array and get_attribute_values functions
